# todo_on_ic

./: .gitignore  Cargo.toml  README.md  build_n_install.sh  deploy.sh  dfx.json  mainnet_deploy.sh  package.json  webpack.config.js
src/todo_on_ic_backend/: Cargo.toml  todo_on_ic_backend.did
src/todo_on_ic_backend/src/: lib.rs
src/todo_on_ic_frontend/src/: index.html  index.js
